--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: PlantUML dark
         uses: docker://plantuml/plantuml
         with:
-          args: -tsvg -darkmode -SbackgroundColor=transparent diagrams/*.wsd -o ../static/diagrams/light/
+          args: -tsvg -darkmode -SbackgroundColor=transparent diagrams/*.wsd -o ../static/diagrams/dark/
 
       - name: Install dependencies
         run: npm ci
