complete plantuml migration

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
       - name: PlantUML new generation system
         run: |
           curl -sSLf -o plantuml.jar https://github.com/plantuml/plantuml/releases/download/v1.2024.6/plantuml-1.2024.6.jar 
-          make diagrams PLANTUML2="java -jar plantuml.jar"
+          make diagrams PLANTUML="java -jar plantuml.jar"
 
       - name: PlantUML light
         uses: docker://plantuml/plantuml
